--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,23 @@
 services:
   - type: web
-    name: Stock-management
+    name: laravel-sqlite-app 
     runtime: php
-    buildCommand: composer install --optimize-autoloader --no-dev && php artisan optimize
+    buildCommand: |
+      composer install --optimize-autoloader --no-dev
+      touch storage/database.sqlite
+      php artisan migrate --force
+      php artisan optimize
     startCommand: php artisan serve --host=0.0.0.0 --port=8000
-    env: php
     envVars:
       - key: APP_ENV
         value: production
       - key: APP_KEY
-        generateValue: true
-      - key: APP_DEBUG
-        value: false
-      - key: LOG_CHANNEL
-        value: stderr
-    database:
-      name: mysql 
+        generateValue: true 
+      - key: DB_CONNECTION
+        value: sqlite
+      - key: DB_DATABASE
+        value: /var/www/storage/database.sqlite
+    disk:
+      name: storage
+      mountPath: /var/www/storage
+      sizeGB: 1  # Stockage persistant pour SQLite
