Ready for Render

--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,24 @@
 services:
   - type: web
-    name: laravel-docker
+    name: laravel-app
     runtime: docker
     dockerfilePath: Dockerfile
     envVars:
       - key: APP_ENV
         value: production
       - key: APP_KEY
-        generateValue: true
+        generateValue: true  # Render génère automatiquement la clé
+      - key: APP_DEBUG
+        value: false
       - key: DB_CONNECTION
         value: sqlite
       - key: DB_DATABASE
         value: /var/www/html/storage/database.sqlite
+      - key: CACHE_DRIVER
+        value: file
+      - key: SESSION_DRIVER
+        value: database
     disk:
       name: storage
-      mountPath: /var/www/html/storage
+      mountPath: /var/www/html/storage  # Stockage persistant pour SQLite
       sizeGB: 1
