--- a/render.yaml
+++ b/render.yaml
@@ -6,11 +6,18 @@ services:
     envVars:
       - key: APP_ENV
         value: production
+      - key: APP_KEY
+        generateValue: true
+      - key: APP_DEBUG
+        value: "true"  # Désactiver après résolution
       - key: DB_CONNECTION
         value: sqlite
       - key: DB_DATABASE
         value: /var/www/html/storage/database.sqlite
+      - key: LOG_CHANNEL
+        value: stderr
     disk:
       name: laravel-storage
       mountPath: /var/www/html/storage
       sizeGB: 1
+    healthCheckPath: /health
